[package]
name = "tensor4all-tensorbackend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tensor storage and linear algebra backend for tensor4all"
keywords = ["tensor", "storage", "backend", "linear-algebra"]
categories = ["science", "mathematics"]

[features]
default = ["backend-faer"]
backend-faer = ["mdarray-linalg-faer"]
backend-lapack = ["mdarray-linalg-lapack"]
backend-libtorch = ["tch"]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
mdarray.workspace = true
mdarray-linalg.workspace = true
mdarray-linalg-faer = { workspace = true, optional = true }
mdarray-linalg-lapack = { workspace = true, optional = true }
mdarray-einsum = { path = "../mdarray-einsum" }
faer.workspace = true
faer-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_distr.workspace = true
tch = { version = "0.22", optional = true }

[dev-dependencies]
approx.workspace = true
