[package]
name = "tensor4all-tensorbackend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tensor storage and linear algebra backend for tensor4all"
keywords = ["tensor", "storage", "backend", "linear-algebra"]
categories = ["science", "mathematics"]

[features]
default = ["backend-tenferro", "tenferro-cpu-faer"]
backend-tenferro = []
tenferro-cpu-faer = [
    "tenferro/cpu-faer",
    "tenferro-ad/cpu-faer",
    "tenferro-cpu/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-faer",
]
tenferro-system-blas = [
    "tenferro/cpu-blas",
    "tenferro-ad/cpu-blas",
    "tenferro-cpu/cpu-blas",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-blas",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-blas",
]
tenferro-provider-inject = [
    "tenferro/cpu-blas",
    "tenferro-ad/cpu-blas",
    "tenferro-cpu/provider-inject",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-blas",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/provider-inject",
]
einsum-dispatch-profile = []

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_distr.workspace = true
omeco.workspace = true
tenferro.workspace = true
tenferro-ad.workspace = true
tenferro-cpu.workspace = true
tenferro-einsum.workspace = true
tenferro-linalg.workspace = true
tenferro-tensor.workspace = true

[dev-dependencies]
approx.workspace = true
