[package]
name = "tensor4all-tensorci"
description = "Tensor Cross Interpolation algorithms for tensor4all"
version.workspace = true
edition.workspace = true
authors = ["Marc Ritter <Ritter.Marc@physik.uni-muenchen.de>", "Hiroshi Shinaoka <h.shinaoka@gmail.com>", "tensor4all contributors"]
license = "MIT"
repository.workspace = true

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
matrixci = { path = "../matrixci" }
tensor4all-simplett = { path = "../tensor4all-simplett" }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
bnum.workspace = true
uint.workspace = true

[[bench]]
name = "cached_function"
harness = false
