[package]
name = "tensor4all-tensorci"
description = "Tensor Cross Interpolation algorithms for tensor4all"
version.workspace = true
edition.workspace = true
authors = ["Marc Ritter <Ritter.Marc@physik.uni-muenchen.de>", "Hiroshi Shinaoka <h.shinaoka@gmail.com>", "tensor4all contributors"]
license.workspace = true
repository.workspace = true

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
matrixluci = { path = "../matrixluci" }
tensor4all-tcicore = { path = "../tensor4all-tcicore" }
tensor4all-simplett = { path = "../tensor4all-simplett" }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
uint.workspace = true
