[package]
name = "tensor4all-treetci"
version.workspace = true
edition.workspace = true
authors = [
    "tensor4all collaboration",
    "Ryo Watanabe <https://github.com/Ryo-wtnb11>",
]
license.workspace = true
repository.workspace = true
description = "Tree Tensor Cross Interpolation on tree graphs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
petgraph.workspace = true
faer.workspace = true
num-complex.workspace = true
rand.workspace = true
matrixluci = { path = "../matrixluci" }
tensor4all-core = { path = "../tensor4all-core" }
tensor4all-treetn = { path = "../tensor4all-treetn" }

[dev-dependencies]
approx.workspace = true
quanticsgrids.workspace = true
