[package]
name = "tensor4all-treetci"
version.workspace = true
edition.workspace = true
authors = [
    "tensor4all collaboration",
    "Ryo Watanabe <https://github.com/Ryo-wtnb11>",
]
license.workspace = true
repository.workspace = true
description = "Tree Tensor Cross Interpolation on tree graphs"

[features]
default = ["tenferro-cpu-faer"]
tenferro-cpu-faer = [
    "tensor4all-core/tenferro-cpu-faer",
    "tensor4all-tcicore/tenferro-cpu-faer",
    "tensor4all-treetn/tenferro-cpu-faer",
    "tenferro-tensor/cpu-faer",
]
tenferro-provider-inject = [
    "tensor4all-core/tenferro-provider-inject",
    "tensor4all-tcicore/tenferro-provider-inject",
    "tensor4all-treetn/tenferro-provider-inject",
    "tenferro-tensor/provider-inject",
]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
petgraph.workspace = true
num-complex.workspace = true
rand.workspace = true
tenferro-tensor.workspace = true
tensor4all-core = { path = "../tensor4all-core", default-features = false }
tensor4all-tcicore = { path = "../tensor4all-tcicore", default-features = false }
tensor4all-treetn = { path = "../tensor4all-treetn", default-features = false }

[dev-dependencies]
approx.workspace = true
quanticsgrids.workspace = true
