[package]
name = "tensor4all-treetn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tensor4all-core = { path = "../tensor4all-core" }
petgraph.workspace = true
anyhow.workspace = true
num-complex.workspace = true
dyn-clone.workspace = true
rand.workspace = true
kryst.workspace = true

[dev-dependencies]
rand_chacha.workspace = true

